(env
 (_
  (flags
   (:standard -w +A-39-4-42))))

(library
 (name mpst_experiments)
 (libraries
  base
  stdio
  ocamlgraph
  ppxlib
  unix
  process
  sedlex
  menhirLib
  ocaml-protoc-plugin)
 (library_flags (-linkall))
 (preprocess
  (pps
   sedlex.ppx
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_sexp_conv
   ppxlib.metaquot
   ppx_here))
 )
